# Aegis-skills

./: .gitignore  README.md  index.js  package-lock.json  package.json
skills/aegis-architect/: SKILL.md  scaffold_feature.py
skills/aegis-architect/aegis-architect-rs/: Cargo.toml
skills/aegis-architect/aegis-architect-rs/src/: main.rs
skills/aegis-architect/archetypes/python_script/: manifest.json  script.py.tmpl
skills/aegis-architect/archetypes/rust_cli_simple/: Cargo.toml.tmpl  main.rs.tmpl  manifest.json
skills/aegis-architect/archetypes/rust_hexagonal/: adapter.rs.tmpl  domain.rs.tmpl  manifest.json  port.rs.tmpl
skills/code-reviewer/: SKILL.md
skills/data-analyzer/: SKILL.md
skills/docx-handler/: SKILL.md
skills/orchestrator/: SKILL.md
