[package]
name = "aegis-architect"
version = "0.1.0"
edition = "2021"
description = "Architecture-enforcing scaffold tool - Rust generates Rust"
authors = ["Shingo"]
license = "MIT"

[[bin]]
name = "aegis-architect"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Template engine (Jinja2-like)
tera = "1"

# JSON/YAML parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Case conversion (snake_case -> PascalCase)
heck = "0.5"

# Colored output
colored = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
